Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -233,8 +233,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -268,7 +270,7 @@
        "  'Area': 2396}]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
