--- a/index.ipynb
+++ b/index.ipynb
@@ -335,7 +335,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "los_cabos_pop = cities[4]\n",
+    "los_cabos_pop = cities[4]['Populatio']\n",
     "los_cabos_pop # 288"
    ]
   },
