--- a/index.ipynb
+++ b/index.ipynb
@@ -393,7 +393,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cities[7]['City'] = None\n",
+    "cities[7]['City'] = \n",
     "cities[7]['City'] # 'PyeongChang'"
    ]
   },
