Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -389,9 +389,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'pyeongChang'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cities[7]['City'] = 'pyeongChang'\n",
     "cities[7]['City'] # 'PyeongChang'"
