--- a/index.ipynb
+++ b/index.ipynb
@@ -417,9 +417,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['pyeongChang', 'South Korea', 44, 1464]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pyeongchang_values = list(cities[7].values())\n",
     "\n",
